[package]
name = "network_power_4"
version = "0.1.0"
edition = "2024"
authors = ["João Pedro Juchum Chagas", "A student"]

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
colog = "1.3.0"
futures = "0.3.31"
log = "0.4.27"
once_cell = "1.21.3"
parking_lot = "0.12.3"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }

[profile.release]
codegen-units = 1
lto = "fat"

[[bin]]
name = "manual"
path = "bin/manual.rs"

[[bin]]
name = "robot"
path = "bin/robot.rs"

[[bin]]
name = "async_robot"
path = "bin/async_robot.rs"


[[bin]]
name = "local"
path = "bin/local.rs"
